# clean-arch

./: Cargo.toml  README.md
.github/workflows/: rust.yml
crates/adapter/: Cargo.toml
crates/adapter/src/: api.rs  auth_extractor.rs  boundary.rs  controller.rs  db.rs  dependency_provider.rs  lib.rs
crates/application/: Cargo.toml
crates/application/src/: identifier.rs  lib.rs  transactional.rs
crates/application/src/gateway/: mod.rs
crates/application/src/gateway/auth_packer/: mod.rs
crates/application/src/gateway/database/: identifier.rs  mod.rs  signup_process.rs  token.rs  user.rs
crates/application/src/gateway/repository/: signup_process.rs  token.rs  user.rs
crates/application/src/gateway/service/: auth.rs  email.rs  mod.rs
crates/application/src/gateway/service/auth/: mod.rs
crates/application/src/gateway/service/authentication/: mod.rs
crates/application/src/gateway/service/email/: email.rs  email_verification.rs  mod.rs
crates/application/src/usecase/: mod.rs  tests.rs
crates/application/src/usecase/signup_process/: complete.rs  completion_timed_out.rs  delete.rs  extend_completion_time.rs  extend_verification_time.rs  fixtures.rs  get_state_chain.rs  initialize.rs  mod.rs  send_verification_email.rs  verification_timed_out.rs  verify_email.rs
crates/application/src/usecase/user/: delete.rs  get_all.rs  get_one.rs  login.rs  mod.rs  update.rs  validate.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs
crates/domain/src/entity/: auth_context.rs  auth_strategy.rs  mod.rs  signup_process.rs  user.rs
crates/domain/src/value_object/: email.rs  id.rs  mod.rs  password.rs  role.rs  username.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/auth/jwt/: Cargo.toml
crates/infrastructure/auth/jwt/src/: lib.rs
crates/infrastructure/auth_extractor/env/: Cargo.toml
crates/infrastructure/auth_extractor/env/src/: lib.rs
crates/infrastructure/boundary/json/: Cargo.toml
crates/infrastructure/boundary/json/src/: ingester.rs  presenter.rs
crates/infrastructure/boundary/poem-openapi/: Cargo.toml
crates/infrastructure/boundary/poem-openapi/src/: ingester.rs  presenter.rs
crates/infrastructure/boundary/poem-openapi/src/ingester/: signup_process.rs  user.rs
crates/infrastructure/boundary/poem-openapi/src/presenter/: mod.rs  signup_process.rs  user.rs
crates/infrastructure/boundary/serde/: Cargo.toml
crates/infrastructure/boundary/serde/src/ingester/: signup_process.rs  user.rs
crates/infrastructure/boundary/serde/src/presenter/: mod.rs
crates/infrastructure/boundary/string/: Cargo.toml
crates/infrastructure/boundary/string/src/ingester/: signup_process.rs  user.rs
crates/infrastructure/boundary/string/src/presenter/: signup_process.rs  user.rs
crates/infrastructure/interface/cli/: Cargo.toml
crates/infrastructure/interface/cli-json/: Cargo.toml
crates/infrastructure/interface/cli-json/src/: lib.rs
crates/infrastructure/interface/cli/src/: lib.rs
crates/infrastructure/interface/poem-openapi/: Cargo.toml
crates/infrastructure/interface/poem-openapi/src/: lib.rs
crates/infrastructure/persistance/json_file/: Cargo.toml
crates/infrastructure/persistance/json_file/src/: lib.rs  models.rs  signup_process.rs  token.rs  user.rs  utils.rs
crates/infrastructure/persistance/sqlx_sqlite/: Cargo.toml
crates/infrastructure/persistance/sqlx_sqlite/migrations/: 20250411144758_users.sql  20250412100416_create_tokens.sql  20250413085733_signup_process_states.sql
crates/infrastructure/persistance/sqlx_sqlite/src/: lib.rs
crates/infrastructure/persistance/sqlx_sqlite/src/models/: mod.rs  signup_process_state.rs  user.rs
crates/infrastructure/persistance/sqlx_sqlite/src/repositories/: mod.rs  signup_process.rs  token.rs  user.rs
crates/infrastructure/service/authentication/jwt/: Cargo.toml
crates/infrastructure/service/authentication/jwt/src/: lib.rs
crates/infrastructure/service/email/file/: Cargo.toml
crates/infrastructure/service/email/file/src/: lib.rs
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/boundary/string/: mod.rs
crates/infrastructure/src/interface/: cli.rs
crates/infrastructure/src/interface/cli/: mod.rs
crates/infrastructure/src/interface/cli/boundary/ingester/: signup_process.rs  user.rs
crates/infrastructure/src/interface/cli/boundary/presenter/: signup_process.rs  user.rs
crates/infrastructure/src/persistance/json_file/: mod.rs  models.rs  signup_process.rs  token.rs  user.rs
crates/infrastructure/src/service/email/: file.rs  mock.rs
src/: lib.rs  main.rs
src/adapter/: api.rs  boundary.rs  db.rs  mod.rs  ql.rs
src/adapter/boundary/: mod.rs
src/adapter/boundary/cli/: mod.rs
src/adapter/controller/: mod.rs  signup_process.rs  user.rs
src/adapter/model/app/: mod.rs  signup_process.rs  user.rs
src/adapter/model/cli/: view.rs
src/adapter/model/view/: json.rs
src/adapter/presenter/: cli.rs  mod.rs
src/application/gateway/repository/: mod.rs  signup_process.rs  user.rs
src/application/usecase/: interfaces.rs  mod.rs
src/application/usecase/signup_process/: add_email.rs  complete.rs  completion_timed_out.rs  delete.rs  extend_completion_time.rs  extend_verification_time.rs  get_state_chain.rs  initialize.rs  mod.rs  verification_timed_out.rs  verify_email.rs
src/application/usecase/user/: create.rs  delete.rs  get_all.rs  get_one.rs  mod.rs  update.rs  validate.rs
src/cli/: mod.rs
src/cli/boundary/ingester/: signup_process.rs  user.rs
src/cli/boundary/presenter/: signup_process.rs
src/db/json_file/: mod.rs  models.rs  signup_process.rs  user.rs
src/domain/entity/: signup_process.rs  user.rs
src/domain/value_object/: mod.rs  password.rs
src/infrastructure/: cli.rs  mod.rs  storage.rs
src/infrastructure/interface/cli/: mod.rs
src/infrastructure/persistance/json_file/: mod.rs  signup_process.rs  user.rs
src/infrastructure/utils/: storage.rs
src/json_boundary/: domain.rs
src/json_boundary/usecase/signup_process/: add_email.rs  complete.rs  initialize.rs  mod.rs
src/json_boundary/usecase/user/: mod.rs  update.rs
(+13 files in other folders)
