[package]
name = "clean-arch"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false


[[bin]]
name = "clean-arch"
path = "src/bin/cli-json-file.rs"

[workspace]
members = [
    "crates/adapter",
    "crates/application",
    "crates/domain",
    "crates/infrastructure/boundary/string",
    "crates/infrastructure/interface/cli",
    "crates/infrastructure/persistance/json_file",
    "crates/infrastructure/service/email/file",
]
exclude = ["crates/web-app"]

[workspace.package]
authors = ["Filip Dulic <filip.dulic@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"


[dependencies]
# Workspace dependencies
ca-infrastructure-service-email-file = { version = "0.1.0", path = "crates/infrastructure/service/email/file" }
ca-infrastructure-boundary-string = { version = "0.1.0", path = "crates/infrastructure/boundary/string" }
ca-infrastructure-interface-cli = { version = "0.1.0", path = "crates/infrastructure/interface/cli" }
ca-infrastructure-persistance-json_file = { version = "0.1.0", path = "crates/infrastructure/persistance/json_file" }
ca-domain = { version = "0.1.0", path = "crates/domain" }
ca-application = { version = "0.1.0", path = "crates/application" }
ca-adapter = { version = "0.1.0", path = "crates/adapter" }
# External dependencies
clap = { version = "4.5.35", features = ["derive"] }
