[package]
name = "clean-arch"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false


[[bin]]
name = "clean-arch-cli-sqlx-sqlite"
path = "src/bin/cli-sqlx-sqlite.rs"

[[bin]]
name = "clean-arch-cli-json-sqlx-sqlite"
path = "src/bin/cli-json-sqlx-sqlite.rs"

[workspace]
members = [
    "crates/adapter",
    "crates/application",
    "crates/domain",
    "crates/infrastructure/boundary/string",
    "crates/infrastructure/boundary/json",
    "crates/infrastructure/interface/cli",
    "crates/infrastructure/interface/cli-json",
    "crates/infrastructure/persistance/sqlx_sqlite",
    "crates/infrastructure/service/email/file",
    "crates/infrastructure/auth/jwt",
]

[workspace.package]
authors = ["Filip Dulic <filip.dulic@gmail.com>"]
version = "0.1.0"
edition = "2021"
rust-version = "1.81.0"


[dependencies]
# Workspace dependencies
ca-infrastructure-service-email-file = { version = "0.1.0", path = "crates/infrastructure/service/email/file" }
ca-infrastructure-boundary-string = { version = "0.1.0", path = "crates/infrastructure/boundary/string" }
ca-infrastructure-boundary-json = { version = "0.1.0", path = "crates/infrastructure/boundary/json" }
ca-infrastructure-interface-cli = { version = "0.1.0", path = "crates/infrastructure/interface/cli" }
ca-infrastructure-interface-cli-json = { version = "0.1.0", path = "crates/infrastructure/interface/cli-json" }
ca-infrastructure-persistance-sqlx-sqlite = { version = "0.1.0", path = "crates/infrastructure/persistance/sqlx_sqlite" }
ca-infrastructure-auth-jwt = { version = "0.1.0", path = "crates/infrastructure/auth/jwt" }
ca-domain = { version = "0.1.0", path = "crates/domain" }
ca-application = { version = "0.1.0", path = "crates/application" }
ca-adapter = { version = "0.1.0", path = "crates/adapter" }
# External dependencies
clap = { version = "4.5.36", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }

[dev-dependencies]
uuid = { version = "1.16.0", features = ["v4"] }
