[package]
name = "ca-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
ca-application = { version = "=0.1.0", path = "../application" }
ca-domain = { version = "=0.1.0", path = "../domain" }

# External dependencies
thiserror = "2.0.2"
