[package]
name = "ca-adapter"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
ca-application = { version = "=0.1.0", path = "../application" }
ca-domain = { version = "=0.1.0", path = "../domain" }

# External dependencies
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
async-trait = "0.1.88"
