[package]
name = "ca-application"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
ca-domain = { version = "=0.1.0", path = "../domain" }
chrono = { version = "0.4.40", features = ["serde"] }

# External dependencies
log = "0.4.27"
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["derive"] }
