[package]
name = "ca-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
uuid = { version = "1.11.0", features = ["v4"] }
chrono = {version = "0.4.38"}
serde = { version = "1.0.214", features = ["derive"], optional = true }

[dev-dependencies]
rstest = "0.23.0"

[features]
serde = ["dep:serde", "uuid/serde", "chrono/serde"]
