[package]
name = "ca-domain"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
uuid = { version = "1.16.0", features = ["v4", "serde"] }
chrono = "0.4.40"
serde = { version = "1.0.219", features = ["derive", "rc"] }
thiserror = "2.0.12"

[dev-dependencies]
rstest = "0.25.0"
