[package]
name = "ca-infrastructure"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]

# Workspace dependencies
ca-adapter = { version = "=0.1.0", path = "../adapter" }
ca-application = { version = "=0.1.0", path = "../application" }
ca-domain = { version = "=0.1.0", path = "../domain" }

# External dependencies
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
log = "0.4"
jfs = "0.9.0"
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }

[dev-dependencies]
rstest = "0.23.0"
env_logger = "0.11.5"
tempfile = "3.2.0"
