[package]
name = "ca-infrastructure-auth-jwt"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
ca-adapter = { version = "=0.1.0", path = "../../../adapter" }
ca-domain = { version = "=0.1.0", path = "../../../domain" }
ca-application = { version = "=0.1.0", path = "../../../application" }

# External dependencies
uuid = { version = "1.2.2", features = ["v4"] }
jsonwebtoken = { version = "9.3.1" }
serde = { version = "1.0.140", features = ["derive"] }
chrono = { version = "0.4.26" }
tokio = { version = "1.34", features = ["full"] }
[dev-dependencies]
