[package]
name = "ca-infrastructure-boundary-poem-openapi"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
ca-adapter = { version = "=0.1.0", path = "../../../adapter" }
ca-application = { version = "=0.1.0", path = "../../../application" }
ca-domain = { version = "=0.1.0", path = "../../../domain" }

# External dependencies
uuid = { version = "1.16.0", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
poem-openapi = { version = "5.1.13", features = ["swagger-ui"] }
http = { version = "1.3.1" }

[dev-dependencies]
