[package]
name = "ca-infrastructure-boundary-string"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]
# Workspace dependencies
ca-adapter = { version = "=0.1.0", path = "../../../adapter" }
ca-application = { version = "=0.1.0", path = "../../../application" }
ca-domain = { version = "=0.1.0", path = "../../../domain" }

# External dependencies
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
