[package]
name = "ca-infrastructure-interface-cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]

# Workspace dependencies
ca-adapter = { version = "=0.1.0", path = "../../../adapter" }
ca-application = { version = "=0.1.0", path = "../../../application", feature = [
    "serde",
] }

# External dependencies
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0.132"
serde = "1.0.214"
uuid = "1.11.0"
[dev-dependencies]
