[package]
name = "ca-infrastructure-interface-poem-openapi"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]

# Workspace dependencies
ca-adapter = { version = "=0.1.0", path = "../../../adapter" }
ca-application = { version = "=0.1.0", path = "../../../application" }
ca-infrastructure-boundary-poem-openapi = { version = "=0.1.0", path = "../../boundary/poem-openapi" }
ca-infrastructure-auth-jwt = { version = "=0.1.0", path = "../../auth/jwt" }

# External dependencies
poem-openapi = { version = "5.1.13" }
serde_json = { version = "1.0.140", features = ["preserve_order"] }
