[package]
name = "ca-infrastructure-persistance-json_file"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]

# Workspace dependencies
ca-domain = { version = "=0.1.0", path = "../../../domain" }
ca-application = { version = "=0.1.0", path = "../../../application" }

# External dependencies
uuid = { version = "1.11.0", features = ["v4", "serde"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.22"
jfs = "0.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
directories = "5.0.1"

[dev-dependencies]
tempfile = "3.13.0"
rstest = "0.23.0"
env_logger = "0.11.5"
