[package]
name = "ca-infrastructure-persistance-json_file"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]

# Workspace dependencies
ca-domain = { version = "=0.1.0", path = "../../../domain" }
ca-application = { version = "=0.1.0", path = "../../../application" }

# External dependencies
uuid = { version = "1.16.0", features = ["v4", "serde"] }
serde = { version = "1.0.219", features = ["derive", "rc"] }
log = "0.4.27"
jfs = "0.9.0"
chrono = { version = "0.4.40", features = ["serde"] }
directories = "6.0.0"

[dev-dependencies]
tempfile = "3.19.1"
rstest = "0.25.0"
env_logger = "0.11.8"
