[package]
name = "ca-infrastructure-persistance-sqlx-sqlite"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]

# Workspace dependencies
ca-domain = { version = "=0.1.0", path = "../../../domain" }
ca-application = { version = "=0.1.0", path = "../../../application" }

# External dependencies
uuid = { version = "1.16.0", features = ["v4", "serde"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive", "rc"] }
chrono = { version = "0.4.40", features = ["serde"] }
sqlx = { version = "0.8.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",

] }
async-trait = "0.1.88"

[dev-dependencies]
