[package]
name = "ca-infrastructure-service-email-file"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
publish = false

[dependencies]

# Workspace dependencies
ca-application = { version = "=0.1.0", path = "../../../../application" }
directories = "6.0.0"
async-trait = { version = "0.1.88" }
# External dependencies

[dev-dependencies]
